# ZkpSharp

./: .gitignore  CHANGELOG.md  INTEGRATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  STELLAR_REALITY_CHECK.md  TesseraSolution.sln  ZkpSharpSolution.sln
.github/workflows/: dotnet.yml
Tessera/: Tessera.csproj
Tessera.Tests/: Tessera.Tests.csproj
Tessera.Tests/Crypto/: BulletproofsTests.cs  Secp256k1Tests.cs
Tessera.Tests/Privacy/: PrivacySdkTests.cs
Tessera/Constants/: ZkpConstants.cs
Tessera/Core/: Utilities.cs
Tessera/Crypto/: PedersenCommitment.cs
Tessera/Exceptions/: ZkpException.cs
Tessera/Interfaces/: IProofProvider.cs  IZkProofProvider.cs
Tessera/Security/: BulletproofsProvider.cs  ProofProvider.cs
Tessera/Validation/: ArgumentValidator.cs
ZkpSharp/: .gitignore  ZKP.cs  ZkpSharp.csproj
ZkpSharp.Tests/: ZKPTests.cs  ZkpSharp.Tests.csproj
ZkpSharp.Tests/Core/: ZkpTests.cs
ZkpSharp.Tests/Crypto/: BulletproofsTests.cs  Secp256k1Tests.cs
ZkpSharp.Tests/Privacy/: PrivacySdkTests.cs
ZkpSharp/Constants/: ZkpConstants.cs
ZkpSharp/Core/: Utilities.cs  ZKP.cs
ZkpSharp/Crypto/: PedersenCommitment.cs
ZkpSharp/Exceptions/: ZkpException.cs
ZkpSharp/Integration/: BlockchainClient.cs
chains/solana/programs/identity-registry/: Cargo.toml
chains/solana/programs/identity-registry/src/: lib.rs
chains/stellar/: Cargo.toml  DEPLOYMENT.md  Makefile  README.md
chains/stellar/contracts/attestation-verifier/: Cargo.toml
chains/stellar/contracts/attestation-verifier/src/: lib.rs
docs/: architecture.md  deploying-solana.md
(+260 files in other folders)
