[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
# Pin minor series for reproducible builds; see https://crates.io/crates/soroban-sdk
soroban-sdk = "25.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Logging profile: https://docs.rs/soroban-sdk/latest/soroban_sdk/macro.log.html
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
